...
      destinations: const <Widget>[
        NavigationDestination(
          icon: Icon(Icons.home, size: 40, color: AppColors.primary),
          label: 'Home',
        ),
        NavigationDestination(
          key: Key('cart_icon_button'),
          icon: Icon(Icons.shopping_cart, size: 40, color: AppColors.primary),
          label: 'Cart',
        ),
        NavigationDestination(
          key: const Key('account_tab_button'),
          icon: Icon(Icons.person, size: 40, color: AppColors.primary),
...
