...
              style: TextStyle(fontSize: 16.0, color: AppColors.cardTextCol),
            ),
            const SizedBox(height: 20),
            _cartButton(cartRef, context),
            const SizedBox(height: 16),
            Text(
              'Recensioni',
              style: TextStyle(
                fontSize: 18.0,
                fontWeight: FontWeight.bold,
                color: AppColors.primary,
              ),
            ),
...
